example-manifests/basic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-service
  namespace: nginx-demo
  labels:
    environment: test
spec:
  selector:
    environment: test
  ports:
    - port: 80
  type: LoadBalancer # If not specified will default to type ClusterIP
